manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: todolist
  name: todolist
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: todolist
