manifests/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-todolist
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: todolist.t-evolvers.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: todolist
                port:
                  number: 80
